# C-HW2-TP

./: .gitignore  CMakeLists.txt  README.md  main.c  testfile  valgrind_supressions.supp
.circleci/: config.yml
include/: IO_manager.h  consecutive_work.h  parallel_work.h  work.h
src/: IO_manager.c  consecutive_work.c  main.c  parallel_work.c
test_data/: small_file
test_data/test_results/: book.txt_results  generated_file_results  small_file_results
test_data/test_results/stress_tests/: main_results_parallel  results_consecutive  results_parallel
unit_tests/: tests.cpp
